<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <!-- Màn hình nhập công thức (EditText vàng) -->
    <EditText
        android:id="@+id/edtFormular"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/yellow"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <!-- Hàng nút nhớ: MC MR M+ M- MS M -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_mc"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_mr"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/txtMPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_m_plus"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_m_minus"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_ms"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_m"
            android:textAlignment="center" />
    </LinearLayout>

    <!-- TableLayout cho các nút bấm -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <!-- Hàng 1: %  CE  C  backspace -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_percent" />

            <Button
                android:id="@+id/btnCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ce" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processBackspace"
                android:text="@string/btn_backspace" />
        </TableRow>

        <!-- Hàng 2: 1/x  x^2  sqrt(x)  : -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_1x" />

            <Button
                android:id="@+id/btnx_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_x2" />

            <Button
                android:id="@+id/btn_xsqrt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sqrt" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_divide" />
        </TableRow>

        <!-- Hàng 3: 7  8  9  * -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_9" />

            <Button
                android:id="@+id/btnX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_multiply" />
        </TableRow>

        <!-- Hàng 4: 4  5  6  - -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_6" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_minus" />
        </TableRow>

        <!-- Hàng 5: 1  2  3  + -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_3" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_plus" />
        </TableRow>

        <!-- Hàng 6: +/-  0  .  = -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnChangeSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_plus_minus" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_0" />

            <Button
                android:id="@+id/btnMulti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processChooseValue"
                android:text="@string/btn_dot" />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_equal" />
        </TableRow>

    </TableLayout>

</LinearLayout>
